# brine-ed25519

./: .gitignore  Cargo.toml  README.md
.github/: ci.yml
.github/workflows/: ci.yml
src/: curve.rs  lib.rs  scalar.rs
src/hasher/: asm_sha512.rs  fast_sha512.rs  mod.rs  sha512.rs
test-program/: Cargo.toml
test-program/src/: lib.rs
