[package]
name = "brine-ed25519"
version = "0.2.0"
edition = "2021"
description = "Ed25519 signature verification for Solana SVM programs using curve25519 syscalls"
license = "MIT"
repository = "https://github.com/zfedoran/brine-ed25519"
readme = "README.md"
keywords = ["solana", "ed25519", "signature", "no_std", "curve25519"]
categories = ["cryptography", "no-std", "wasm", "embedded"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false }
solana-curve25519 = "4.0.0"
solana-program-error = "3.0.1"
sha2 = { version = "0.10.8", default-features = false }
