[package]
name = "brine-ed25519"
version = "0.4.1"
edition = "2021"
description = "Ed25519 signature verification for Solana SVM programs using curve25519 syscalls"
license = "MIT"
repository = "https://github.com/zfedoran/brine-ed25519"
readme = "README.md"
keywords = ["solana", "ed25519", "signature", "no_std", "curve25519"]
categories = ["cryptography", "no-std", "wasm", "embedded"]

[lib]
crate-type = ["lib"]

[dependencies]
sha2 = { version = "0.10.8", default-features = false }

[target.'cfg(not(target_os = "solana"))'.dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = "2.3.0"

[dev-dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = ['cfg(target_os, values("solana"))']
