[package]
name = "brine-ed25519"
version = "0.6.0"
edition = "2021"
description = "Ed25519 signature verification for Solana SVM programs using curve25519 syscalls"
license = "MIT"
repository = "https://github.com/zfedoran/brine-ed25519"
readme = "README.md"
keywords = ["solana", "ed25519", "signature", "no_std", "curve25519"]
categories = ["cryptography", "no-std", "wasm", "embedded"]

[lib]
crate-type = ["lib"]

[dependencies]
solana-address = { version = "2.6.0", default-features = false }
solana-program-error = { version = "3.0.1", default-features = false }

[target.'cfg(all(not(target_arch = "bpf"), not(target_os = "solana")))'.dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false }

[dev-dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
sha2 = { version = "0.10.8", default-features = false }

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = ['cfg(target_os, values("solana"))']
