[package]
name = "brine-ed25519-test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "brine_ed25519_test"
crate-type = ["cdylib", "lib"]

[features]
fast-sha512 = ["brine-ed25519/fast-sha512"]
asm-sha512 = ["brine-ed25519/asm-sha512"]

[dependencies]
brine-ed25519 = { path = "../" }
pinocchio = "0.11.1"

[dev-dependencies]
mollusk-svm = "0.12.0"
solana-address = "2.6.0"
solana-instruction = "3.4.0"
